Try to fix scrollbar bugs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,7 @@ ul {
     #allocation-popup #allocation-table-container td {
       height: 20px; }
       #allocation-popup #allocation-table-container td * {
-        height: 20px;
-        overflow: scroll; }
+        height: 20px; }
       #allocation-popup #allocation-table-container td div {
         display: flex;
         align-items: center;
