--- a/public/scss/modules/home/_allocation-popup.scss
+++ b/public/scss/modules/home/_allocation-popup.scss
@@ -19,7 +19,6 @@
 			height: 20px;
 			* {
 				height: 20px;
-				overflow: scroll;
 			}
 			div {
 				display: flex;
